# libqlucidcamera-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_windows.ps1
cmake/: qlucidcameraConfig.cmake.in
include/libqlucidcamera-cpp/: lucid_camera.h
include/qlucidcamera/: lucid_camera.h  lucid_camera_connector.h
src/: lucid_camera.cpp  lucid_camera_connector.cpp
